--- a/Model_Comparison.ipynb
+++ b/Model_Comparison.ipynb
@@ -7,8 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "````xml\n",
-    "<VSCode.Cell language=\"python\">\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import numpy as np\n",
@@ -22,8 +20,7 @@
     "print(f\"Using device: {device}\")\n",
     "torch.manual_seed(42)\n",
     "np.random.seed(42)\n",
-    "</VSCode.Cell>\n",
-    "<VSCode.Cell language=\"python\">\n",
+    "\n",
     "base_config = {\n",
     "    'epochs': 50,\n",
     "    'batch_size': 32,\n",
@@ -45,8 +42,7 @@
     "print(f\"Channels: {channels}\")\n",
     "print(f\"Train batches: {len(train_loader)}\")\n",
     "print(f\"Test batches: {len(test_loader)}\")\n",
-    "</VSCode.Cell>\n",
-    "<VSCode.Cell language=\"python\">\n",
+    "\n",
     "models = {\n",
     "    'DnCNN': DnCNN(channels=channels, num_layers=17, features=64),\n",
     "    'UNet': UNet(n_channels=channels, n_classes=channels, bilinear=False),\n",
@@ -59,8 +55,7 @@
     "for name, model in models.items():\n",
     "    param_count = sum(p.numel() for p in model.parameters())\n",
     "    print(f\"{name}: {param_count:,} parameters\")\n",
-    "</VSCode.Cell>\n",
-    "<VSCode.Cell language=\"python\">\n",
+    "\n",
     "results = {}\n",
     "training_times = {}\n",
     "\n",
@@ -101,8 +96,7 @@
     "    print(f\"  Test PSNR: {test_psnr:.2f} dB\")\n",
     "    print(f\"  Test SSIM: {test_ssim:.4f}\")\n",
     "    print(f\"  Training Time: {training_time:.1f}s\")\n",
-    "</VSCode.Cell>\n",
-    "<VSCode.Cell language=\"python\">\n",
+    "\n",
     "print(\"\\n\" + \"=\"*80)\n",
     "print(\"COMPREHENSIVE MODEL COMPARISON\")\n",
     "print(\"=\"*80)\n",
@@ -113,8 +107,7 @@
     "for model_name, result in results.items():\n",
     "    print(f\"{model_name:<12} {result['test_psnr']:<10.2f} {result['test_ssim']:<8.4f} \"\n",
     "          f\"{result['parameters']/1e6:<12.2f} {result['training_time']:<10.1f}\")\n",
-    "</VSCode.Cell>\n",
-    "<VSCode.Cell language=\"python\">\n",
+    "\n",
     "fig, axes = plt.subplots(2, 2, figsize=(15, 12))\n",
     "\n",
     "model_names = list(results.keys())\n",
@@ -155,8 +148,7 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
-    "</VSCode.Cell>\n",
-    "<VSCode.Cell language=\"python\">\n",
+    "\n",
     "print(\"Performance vs Efficiency Analysis\")\n",
     "plt.figure(figsize=(12, 8))\n",
     "\n",
@@ -174,8 +166,7 @@
     "plt.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
-    "</VSCode.Cell>\n",
-    "<VSCode.Cell language=\"python\">\n",
+    "\n",
     "print(\"Robustness Analysis: Testing on Multiple Noise Levels\")\n",
     "noise_levels = [0.1, 0.15, 0.2, 0.25, 0.3, 0.35]\n",
     "robustness_results = {name: [] for name in model_names}\n",
@@ -219,8 +210,7 @@
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
-    "</VSCode.Cell>\n",
-    "<VSCode.Cell language=\"python\">\n",
+    "\n",
     "print(\"Visual Comparison on Sample Images\")\n",
     "batch = next(iter(test_loader))\n",
     "noisy, clean, _ = batch\n",
@@ -252,8 +242,7 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
-    "</VSCode.Cell>\n",
-    "<VSCode.Cell language=\"python\">\n",
+    "\n",
     "print(\"FINAL RECOMMENDATIONS\")\n",
     "print(\"=\"*60)\n",
     "\n",
@@ -275,9 +264,316 @@
     "print(f\"\\n🎯 For your MNIST denoising task:\")\n",
     "print(f\"   • Best choice: {best_psnr[0]} for maximum quality\")\n",
     "print(f\"   • Practical choice: DnCNN for speed and simplicity\")\n",
-    "print(f\"   • Research choice: NAFNet for cutting-edge performance\")\n",
-    "</VSCode.Cell>\n",
-    "````"
+    "print(f\"   • Research choice: NAFNet for cutting-edge performance\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e8e790e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_config = {\n",
+    "    'epochs': 50,\n",
+    "    'batch_size': 32,\n",
+    "    'dataset': 'mnist',\n",
+    "    'noise_type': 'gaussian',\n",
+    "    'noise_level': 0.2,\n",
+    "    'optimizer': 'adamw',\n",
+    "    'weight_decay': 1e-4\n",
+    "}\n",
+    "\n",
+    "train_loader, val_loader, test_loader, channels = load_dataset(\n",
+    "    base_config['dataset'], \n",
+    "    base_config['batch_size'], \n",
+    "    base_config['noise_type'], \n",
+    "    base_config['noise_level']\n",
+    ")\n",
+    "\n",
+    "print(f\"Loaded {base_config['dataset']} dataset\")\n",
+    "print(f\"Channels: {channels}\")\n",
+    "print(f\"Train batches: {len(train_loader)}\")\n",
+    "print(f\"Test batches: {len(test_loader)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea67a089",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = {\n",
+    "    'DnCNN': DnCNN(channels=channels, num_layers=17, features=64),\n",
+    "    'UNet': UNet(n_channels=channels, n_classes=channels, bilinear=False),\n",
+    "    'RCAN': RCAN(n_channels=channels, n_feats=64, n_blocks=8, reduction=16),\n",
+    "    'NAFNet': NAFNet(img_channel=channels, width=32, middle_blk_num=8, \n",
+    "                     enc_blk_nums=[2, 2, 4, 8], dec_blk_nums=[2, 2, 2, 2]),\n",
+    "    'DRUNet': DRUNet(in_nc=channels, out_nc=channels, nc=[64, 128, 256, 512], nb=4)\n",
+    "}\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    param_count = sum(p.numel() for p in model.parameters())\n",
+    "    print(f\"{name}: {param_count:,} parameters\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "623ad000",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = {}\n",
+    "training_times = {}\n",
+    "\n",
+    "for model_name, model in models.items():\n",
+    "    print(f\"\\n{'='*50}\")\n",
+    "    print(f\"Training {model_name}\")\n",
+    "    print(f\"{'='*50}\")\n",
+    "    \n",
+    "    config = base_config.copy()\n",
+    "    config['model_name'] = model_name\n",
+    "    \n",
+    "    if model_name == 'NAFNet':\n",
+    "        config['learning_rate'] = 2e-4\n",
+    "        config['batch_size'] = 16\n",
+    "    elif model_name == 'RCAN':\n",
+    "        config['learning_rate'] = 1e-4\n",
+    "    else:\n",
+    "        config['learning_rate'] = 1e-3\n",
+    "    \n",
+    "    trainer = Trainer(model, train_loader, val_loader, test_loader, device, config)\n",
+    "    \n",
+    "    start_time = time.time()\n",
+    "    trainer.train()\n",
+    "    training_time = time.time() - start_time\n",
+    "    \n",
+    "    test_loss, test_psnr, test_ssim = trainer.test()\n",
+    "    \n",
+    "    results[model_name] = {\n",
+    "        'test_loss': test_loss,\n",
+    "        'test_psnr': test_psnr,\n",
+    "        'test_ssim': test_ssim,\n",
+    "        'parameters': sum(p.numel() for p in model.parameters()),\n",
+    "        'training_time': training_time\n",
+    "    }\n",
+    "    \n",
+    "    print(f\"{model_name} Results:\")\n",
+    "    print(f\"  Test Loss: {test_loss:.6f}\")\n",
+    "    print(f\"  Test PSNR: {test_psnr:.2f} dB\")\n",
+    "    print(f\"  Test SSIM: {test_ssim:.4f}\")\n",
+    "    print(f\"  Training Time: {training_time:.1f}s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32f5eb02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"COMPREHENSIVE MODEL COMPARISON\")\n",
+    "print(\"=\"*80)\n",
+    "\n",
+    "print(f\"{'Model':<12} {'PSNR (dB)':<10} {'SSIM':<8} {'Params (M)':<12} {'Time (s)':<10}\")\n",
+    "print(\"-\" * 80)\n",
+    "\n",
+    "for model_name, result in results.items():\n",
+    "    print(f\"{model_name:<12} {result['test_psnr']:<10.2f} {result['test_ssim']:<8.4f} \"\n",
+    "          f\"{result['parameters']/1e6:<12.2f} {result['training_time']:<10.1f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3fe179d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(2, 2, figsize=(15, 12))\n",
+    "\n",
+    "model_names = list(results.keys())\n",
+    "psnr_values = [results[name]['test_psnr'] for name in model_names]\n",
+    "ssim_values = [results[name]['test_ssim'] for name in model_names]\n",
+    "param_values = [results[name]['parameters']/1e6 for name in model_names]\n",
+    "time_values = [results[name]['training_time'] for name in model_names]\n",
+    "\n",
+    "colors = ['#FF6B6B', '#4ECDC4', '#45B7D1', '#96CEB4', '#FFEAA7']\n",
+    "\n",
+    "axes[0, 0].bar(model_names, psnr_values, color=colors)\n",
+    "axes[0, 0].set_ylabel('PSNR (dB)')\n",
+    "axes[0, 0].set_title('Peak Signal-to-Noise Ratio')\n",
+    "axes[0, 0].tick_params(axis='x', rotation=45)\n",
+    "for i, v in enumerate(psnr_values):\n",
+    "    axes[0, 0].text(i, v + 0.1, f'{v:.1f}', ha='center', fontweight='bold')\n",
+    "\n",
+    "axes[0, 1].bar(model_names, ssim_values, color=colors)\n",
+    "axes[0, 1].set_ylabel('SSIM')\n",
+    "axes[0, 1].set_title('Structural Similarity Index')\n",
+    "axes[0, 1].tick_params(axis='x', rotation=45)\n",
+    "for i, v in enumerate(ssim_values):\n",
+    "    axes[0, 1].text(i, v + 0.005, f'{v:.3f}', ha='center', fontweight='bold')\n",
+    "\n",
+    "axes[1, 0].bar(model_names, param_values, color=colors)\n",
+    "axes[1, 0].set_ylabel('Parameters (Millions)')\n",
+    "axes[1, 0].set_title('Model Size')\n",
+    "axes[1, 0].tick_params(axis='x', rotation=45)\n",
+    "for i, v in enumerate(param_values):\n",
+    "    axes[1, 0].text(i, v + max(param_values)*0.02, f'{v:.1f}M', ha='center', fontweight='bold')\n",
+    "\n",
+    "axes[1, 1].bar(model_names, time_values, color=colors)\n",
+    "axes[1, 1].set_ylabel('Training Time (seconds)')\n",
+    "axes[1, 1].set_title('Training Efficiency')\n",
+    "axes[1, 1].tick_params(axis='x', rotation=45)\n",
+    "for i, v in enumerate(time_values):\n",
+    "    axes[1, 1].text(i, v + max(time_values)*0.02, f'{v:.0f}s', ha='center', fontweight='bold')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3955c821",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Performance vs Efficiency Analysis\")\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "\n",
+    "for i, (model_name, result) in enumerate(results.items()):\n",
+    "    plt.scatter(result['parameters']/1e6, result['test_psnr'], \n",
+    "               s=200, alpha=0.7, color=colors[i], label=model_name)\n",
+    "    plt.annotate(model_name, \n",
+    "                (result['parameters']/1e6, result['test_psnr']),\n",
+    "                xytext=(5, 5), textcoords='offset points', fontsize=10)\n",
+    "\n",
+    "plt.xlabel('Model Size (Million Parameters)')\n",
+    "plt.ylabel('PSNR (dB)')\n",
+    "plt.title('Performance vs Model Size Trade-off')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "984434cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Robustness Analysis: Testing on Multiple Noise Levels\")\n",
+    "noise_levels = [0.1, 0.15, 0.2, 0.25, 0.3, 0.35]\n",
+    "robustness_results = {name: [] for name in model_names}\n",
+    "\n",
+    "for noise_level in noise_levels:\n",
+    "    print(f\"\\nTesting noise level: {noise_level}\")\n",
+    "    _, _, test_loader_noise, _ = load_dataset(\n",
+    "        base_config['dataset'], \n",
+    "        base_config['batch_size'], \n",
+    "        base_config['noise_type'], \n",
+    "        noise_level\n",
+    "    )\n",
+    "    \n",
+    "    for model_name, model in models.items():\n",
+    "        model.eval()\n",
+    "        total_psnr = 0\n",
+    "        num_batches = 0\n",
+    "        \n",
+    "        with torch.no_grad():\n",
+    "            for batch in test_loader_noise:\n",
+    "                if num_batches > 50:\n",
+    "                    break\n",
+    "                noisy, clean, _ = batch\n",
+    "                noisy, clean = noisy.to(device), clean.to(device)\n",
+    "                \n",
+    "                output = model(noisy)\n",
+    "                total_psnr += calculate_psnr(output, clean).item()\n",
+    "                num_batches += 1\n",
+    "        \n",
+    "        avg_psnr = total_psnr / num_batches\n",
+    "        robustness_results[model_name].append(avg_psnr)\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "for model_name, psnr_list in robustness_results.items():\n",
+    "    plt.plot(noise_levels, psnr_list, 'o-', label=model_name, linewidth=2, markersize=6)\n",
+    "\n",
+    "plt.xlabel('Noise Level')\n",
+    "plt.ylabel('PSNR (dB)')\n",
+    "plt.title('Model Robustness: Performance vs Noise Level')\n",
+    "plt.legend()\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62959d32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Visual Comparison on Sample Images\")\n",
+    "batch = next(iter(test_loader))\n",
+    "noisy, clean, _ = batch\n",
+    "noisy, clean = noisy[:4].to(device), clean[:4]\n",
+    "\n",
+    "outputs = {}\n",
+    "for model_name, model in models.items():\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        outputs[model_name] = model(noisy).cpu()\n",
+    "\n",
+    "fig, axes = plt.subplots(len(model_names) + 2, 4, figsize=(16, 20))\n",
+    "\n",
+    "for i in range(4):\n",
+    "    axes[0, i].imshow(noisy[i].cpu().squeeze(), cmap='gray')\n",
+    "    axes[0, i].set_title(f'Noisy Image {i+1}' if i == 0 else '')\n",
+    "    axes[0, i].axis('off')\n",
+    "    \n",
+    "    axes[1, i].imshow(clean[i].squeeze(), cmap='gray')\n",
+    "    axes[1, i].set_title(f'Clean Image {i+1}' if i == 0 else '')\n",
+    "    axes[1, i].axis('off')\n",
+    "    \n",
+    "    for j, (model_name, output) in enumerate(outputs.items()):\n",
+    "        axes[j+2, i].imshow(output[i].squeeze(), cmap='gray')\n",
+    "        if i == 0:\n",
+    "            psnr_val = calculate_psnr(output[i:i+1], clean[i:i+1]).item()\n",
+    "            axes[j+2, i].set_title(f'{model_name}\\nPSNR: {psnr_val:.1f}dB')\n",
+    "        axes[j+2, i].axis('off')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"FINAL RECOMMENDATIONS\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "best_psnr = max(results.items(), key=lambda x: x[1]['test_psnr'])\n",
+    "best_efficiency = min(results.items(), key=lambda x: x[1]['parameters'])\n",
+    "best_speed = min(results.items(), key=lambda x: x[1]['training_time'])\n",
+    "\n",
+    "print(f\"🏆 Best Overall Performance: {best_psnr[0]} ({best_psnr[1]['test_psnr']:.2f} dB)\")\n",
+    "print(f\"⚡ Most Efficient (Smallest): {best_efficiency[0]} ({best_efficiency[1]['parameters']/1e6:.1f}M params)\")\n",
+    "print(f\"🚀 Fastest Training: {best_speed[0]} ({best_speed[1]['training_time']:.1f}s)\")\n",
+    "\n",
+    "print(\"\\n📊 Summary:\")\n",
+    "print(\"- DnCNN: Classic, simple, fast training\")\n",
+    "print(\"- U-Net: Good skip connections, balanced performance\")\n",
+    "print(\"- RCAN: Attention mechanism, good for detail preservation\")\n",
+    "print(\"- NAFNet: State-of-the-art, best performance but slower\")\n",
+    "print(\"- DRUNet: Deep unfolding, good theoretical foundation\")\n",
+    "\n",
+    "print(f\"\\n🎯 For your MNIST denoising task:\")\n",
+    "print(f\"   • Best choice: {best_psnr[0]} for maximum quality\")\n",
+    "print(f\"   • Practical choice: DnCNN for speed and simplicity\")\n",
+    "print(f\"   • Research choice: NAFNet for cutting-edge performance\")"
    ]
   }
  ],
